<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="30dp"
    tools:context=".view.activity.CadastroEnderecoActivity">

    <TextView
        android:id="@+id/endereco"
        android:layout_width="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:gravity="center"
        android:text="@string/endereco"
        android:textColor="@color/colorTextStandard"
        android:textStyle="bold"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/cep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/endereco"
        app:layout_constraintStart_toStartOf="parent"
        android:fontFamily="@font/poppins"
        android:text="@string/cep"
        android:textColor="@color/colorTextStandard"
        android:textSize="14sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/input_cep"
        android:layout_width="150dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/cep"
        android:hint="@string/hint_cep"
        android:inputType="number"
        android:maxLength="9"
        />

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintEnd_toEndOf="@+id/input_cep"
        app:layout_constraintBottom_toBottomOf="@+id/input_cep"
        app:layout_constraintTop_toTopOf="@+id/input_cep"
        android:src="@drawable/icone_pesquisa"
        android:onClick="buscarCep"
        app:tint="@color/roxo" />

    <TextView
        android:id="@+id/estado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/estado"
        app:layout_constraintTop_toTopOf="@+id/cep"
        app:layout_constraintStart_toStartOf="@+id/input_estado"
        android:textSize="14sp"
        android:textColor="@color/colorTextStandard"
        android:textStyle="bold"
        android:fontFamily="@font/poppins"/>

    <EditText
        android:id="@+id/input_estado"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/estado"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/hint_estado"
        android:layout_marginEnd="20dp"
        android:focusable="false"
        android:inputType="text"
        android:selectAllOnFocus="true"
        android:maxLength="2" />

    <TextView
        android:id="@+id/cidade"
        android:layout_width="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/input_cep"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins"
        android:textColor="@color/colorTextStandard"
        android:text="@string/cidade"
        android:textSize="14sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/input_cidade"
        android:layout_width="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/cidade"
        android:hint="@string/hint_cidade"
        android:inputType="text"
        android:focusable="false"
        android:maxLength="30" />

    <TextView
        android:id="@+id/endereco_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/endereco"
        app:layout_constraintTop_toBottomOf="@+id/input_cidade"
        android:textSize="14sp"
        android:textColor="@color/colorTextStandard"
        android:textStyle="bold"
        android:fontFamily="@font/poppins"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/input_endereco"
        android:layout_width="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/endereco_text_view"
        android:inputType="text"
        android:hint="@string/hint_endereco"
        android:focusable="false"
        android:maxLength="30"/>

    <TextView
        android:id="@+id/bairro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/bairro"
        app:layout_constraintTop_toBottomOf="@+id/input_endereco"
        android:textSize="14sp"
        android:textColor="@color/colorTextStandard"
        android:textStyle="bold"
        android:fontFamily="@font/poppins"/>

    <EditText
        android:id="@+id/input_bairro"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/bairro"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/hint_bairro"
        android:inputType="text"
        android:focusable="false"
        android:maxLength="30"/>

    <TextView
        android:id="@+id/numero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        app:layout_constraintTop_toTopOf="@+id/bairro"
        app:layout_constraintLeft_toLeftOf="@+id/input_numero"
        android:text="@string/numero"
        android:textColor="@color/colorTextStandard"
        android:textSize="14sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/input_numero"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/numero"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="20dp"
        android:hint="@string/hint_numero"
        android:inputType="text"
        android:maxLength="6"/>

    <Button
        android:id="@+id/btn_voltar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/input_bairro"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="60dp"
        android:onClick="voltar"
        android:text="@string/voltar"
        android:textColor="@color/white"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:background="@drawable/button"
        android:fontFamily="@font/poppins"
        android:textSize="14sp" />

    <Button
        android:layout_width="wrap_content"
        android:id="@+id/btn_tela_endereco_proximo"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:fontFamily="@font/poppins"
        android:onClick="cadastroEndereco"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/proximo"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:background="@drawable/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_numero"
        app:layout_constraintTop_toTopOf="@+id/btn_voltar" />

    <ImageView
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginRight="10dp"
        app:layout_constraintTop_toTopOf="@+id/imagem_tela_cadastro_endereco"
        app:layout_constraintEnd_toStartOf="@+id/imagem_tela_cadastro_endereco"
        android:src="@drawable/icone_bolinha_com_borda"/>

    <ImageView
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:id="@+id/imagem_tela_cadastro_endereco"
        app:layout_constraintTop_toBottomOf="@id/btn_voltar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"
        android:src="@drawable/icone_bolinha_preenchida"/>

    <ImageView
        android:layout_width="15dp"
        android:layout_height="15dp"
        app:layout_constraintTop_toTopOf="@+id/imagem_tela_cadastro_endereco"
        app:layout_constraintStart_toEndOf="@+id/imagem_tela_cadastro_endereco"
        android:layout_marginLeft="10dp"
        android:src="@drawable/icone_bolinha_com_borda"/>

</androidx.constraintlayout.widget.ConstraintLayout>