<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:layout_margin="30dp"
    tools:context=".view.activity.MainActivity">

    <TextView
        android:id="@+id/hiper_xpress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:fontFamily="@font/poppins"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/colorTextStandard"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/sub_titulo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/sub_titulo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/poppins"
        android:gravity="center"
        android:text="@string/sub_titulo"
        android:textColor="@color/colorTextStandard"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/email_text_view_tela_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/email_text_view_tela_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins"
        android:text="@string/email"
        android:textColor="@color/colorTextStandard"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/input_email_tela_login"
        app:layout_constraintLeft_toLeftOf="parent" />


    <EditText
        android:id="@+id/input_email_tela_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@id/senha_text_view_tela_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:id="@+id/senha_text_view_tela_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/senha"
        android:textColor="@color/colorTextStandard"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/input_senha_tela_login"

        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/input_senha_tela_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_senha"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imagem_conf_senha"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintEnd_toEndOf="@id/input_senha_tela_login"
        app:layout_constraintTop_toTopOf="@id/input_senha_tela_login"
        app:layout_constraintBottom_toBottomOf="@id/input_senha_tela_login"
        android:src="@drawable/icone_visualizar_senha"
        android:onClick="visualizarSenhaLogin"
        app:tint="@color/roxo" />


    <TextView
        android:id="@+id/nao_tenho_cadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins"
        android:onClick="irCadastro"
        android:text="@string/nao_tenho_cadastro"
        android:textColor="@color/roxo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_senha_tela_login" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:onClick="esqueciSenha"
        android:text="@string/esqueci_minha_senha"
        android:textColor="@color/roxo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/nao_tenho_cadastro" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/button"
        android:fontFamily="@font/poppins"
        android:onClick="login"
        android:textStyle="bold"
        android:text="@string/entrar"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nao_tenho_cadastro" />

    <ImageView
        android:id="@+id/iv_gif"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/btn_login"
        app:layout_constraintStart_toStartOf="@id/btn_login"
        app:layout_constraintTop_toBottomOf="@id/btn_login" />


</androidx.constraintlayout.widget.ConstraintLayout>